# np-calc

./: .dockerignore  .gitignore  BUILD_EXE.md  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
src/: AnimatedNumber.tsx  App.tsx  calc.ts  index.css  intensityTable.ts  weather.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
